Controlador Empleos terminado a espera de empezar con el front

--- a/Web/WEB_MVC_FRONT/Views/Empleos/Index.cshtml
+++ b/Web/WEB_MVC_FRONT/Views/Empleos/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MIMODELO_envases.Empleo>
+﻿@model IEnumerable<MIMODELO_envases.Empleo>
 
 @{
     ViewBag.Title = "Index";
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-             @*@Html.DisplayNameFor(model => model.Nombre);*@
+           @*  @Html.DisplayNameFor(model => model.name);*@
         </th>
         <th></th>
     </tr>
