--- a/Web/WEB_MVC_FRONT/Views/Empleos/Details.cshtml
+++ b/Web/WEB_MVC_FRONT/Views/Empleos/Details.cshtml
@@ -18,10 +18,35 @@
         <dd>
             @Html.DisplayFor(model => model.Nombre)
         </dd>
-
     </dl>
 </div>
+
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+<hr />
+
+<div>
+    <h4>Empleados con ese empleo</h4>
+    <table class="table">
+
+        @foreach (var item in Model.Empleados)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                    @Html.DisplayFor(modelItem => item.Nombre)
+                    @Html.DisplayFor(modelItem => item.Apellidos)
+                </td>
+                @*   <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    </td>
+                *@
+            </tr>
+        }
+
+    </table>
+</div>
